random message added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>This is index file.</h1>
+    <h2>random text.</h2>
     <h1>Github</h1>
     <h2>We are learning Git and GitHub.</h2>
     <p>
